--- a/CV.html
+++ b/CV.html
@@ -2,6 +2,7 @@
     <head>
         <title>CV-Alejandra Plaza González</title>
         <meta charset="utf-8"/>
+        <link rel="stylesheet" href="CV.css">
     </head>
     <body>
         
