Header básico sin incluir imagen

--- a/CV.html
+++ b/CV.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="CV.css">
     </head>
     <body>
-        
+        <header>
+            <h1 id="nombre">Alejandra Plaza González</h1>
+            <p id="fecha de nacimiento">15/09/1999</p>
+        </header>
     </body>
 </html>
