Añado fotografia en HEADER

--- a/CV.html
+++ b/CV.html
@@ -8,6 +8,7 @@
         <header>
             <h1 id="nombre">Alejandra Plaza González</h1>
             <p id="fecha de nacimiento">15/09/1999</p>
+            <img src="foto.jpg" alt="Foto Alumno Alejandra Plaza González">
         </header>
     </body>
 </html>
