Añado el div de la CajitaEjemplo y le pongo un estilo

--- a/CV.html
+++ b/CV.html
@@ -8,6 +8,9 @@
         <header>
             <h1 id="nombre">Alejandra Plaza González</h1>
             <p id="fecha de nacimiento">15/09/1999</p>
+            <div id="CajitaEjemplo">
+                <h2>Mira la imagen de abajo!</h2>
+            </div>
             <img src="foto.jpg" alt="Foto Alumno Alejandra Plaza González">
         </header>
     </body>
