Añado 4 marcas section

--- a/CV.html
+++ b/CV.html
@@ -13,5 +13,13 @@
             </div>
             <img src="foto.jpg" alt="Foto Alumno Alejandra Plaza González">
         </header>
+        <section id="formación">
+        </section>
+        <section id="laboral">
+        </section>
+        <section id="enlaces">
+        </section>
+        <section id="otros">
+        </section>
     </body>
 </html>
