Añado lista en la seccion formación

--- a/CV.html
+++ b/CV.html
@@ -14,6 +14,14 @@
             <img src="foto.jpg" alt="Foto Alumno Alejandra Plaza González">
         </header>
         <section id="formación">
+            <h2>Formación:</h2>
+            <ul>
+                <li>Cursando grado en Ingeniería de Tecnologías y Servicios de la Telecomunicación, Universidad Politécnica de Madrid, Madrid</li>
+                <li>Título de bachillerato, CIDEAD</li>
+                <li>Grado medio de enseñanzas artísticas, English National Ballet, Londres</li>
+                <li>Diploma en danza clásica, English National Ballet, Londres</li>
+                <li>Enseñanza Secundaria Obligatoria, Instituto Cervantes, Madrid</li>
+            </ul>
         </section>
         <section id="laboral">
         </section>
