Añado info a la seccion laboral

--- a/CV.html
+++ b/CV.html
@@ -24,6 +24,15 @@
             </ul>
         </section>
         <section id="laboral">
+            <ul>
+                <li>Azafata de eventos,NARGY, Madrid, España.</li>
+                <li>Acomodadora/Ropero, Malinche el musical, Madrid, España.</li>
+                <li>Dependienta Oteros, Centro comercial Las Rosas, Madrid, España.</li>
+                <li>Dependienta Oteros, Centro comercial Islazul, Madrid, España.</li>
+                <li>Bailarina en cuerpo de baile (Danza clásica), Columbia Classical Ballet, Carolina del Sur, EEUU.</li>
+                <li>Dependienta Decathlon, Centro comercial Plenilunio, Madrid, España.</li>
+                <li>Bailarina de danza clásica, Valencia Dancing Forward 2018, Valencia, España.</li>
+            </ul>
         </section>
         <section id="enlaces">
         </section>
