Añado titulo h2 a la seccion laboral

--- a/CV.html
+++ b/CV.html
@@ -24,6 +24,7 @@
             </ul>
         </section>
         <section id="laboral">
+            <h2>Experiencia laboral:</h2>
             <ul>
                 <li>Azafata de eventos,NARGY, Madrid, España.</li>
                 <li>Acomodadora/Ropero, Malinche el musical, Madrid, España.</li>
