Añado en seccion enlaces, un h2 con el título y el link a mi github

--- a/CV.html
+++ b/CV.html
@@ -36,6 +36,12 @@
             </ul>
         </section>
         <section id="enlaces">
+            <h2>Enlaces de interés:</h2>
+            <ul>
+                <li>
+                    <a id="info" href="https://github.com/AlejandraPG15"> Github Alejandra Plaza</a>
+                </li>
+            </ul>
         </section>
         <section id="otros">
         </section>
