Relleno la seccion de otros

--- a/CV.html
+++ b/CV.html
@@ -44,6 +44,9 @@
             </ul>
         </section>
         <section id="otros">
+            <h2>Otros:</h2>
+            <li>Permiso de conducir B</li>
+            <li>Aptitudes: Persona dinámica, organizada, con gran disciplina, buena disposición a trabajar y fuerte capacidad comunicativa.</li>
         </section>
     </body>
 </html>
