Añado el footer

--- a/CV.html
+++ b/CV.html
@@ -48,5 +48,8 @@
             <li>Permiso de conducir B</li>
             <li>Aptitudes: Persona dinámica, organizada, con gran disciplina, buena disposición a trabajar y fuerte capacidad comunicativa.</li>
         </section>
+        <footer>
+            Actualizado el 18/02/2024
+        </footer>
     </body>
 </html>
