Creo un div con un texto h2 justo antes de las secciones

--- a/CV.html
+++ b/CV.html
@@ -13,6 +13,10 @@
             </div>
             <img src="foto.jpg" alt="Foto Alumno Alejandra Plaza González">
         </header>
+        <div class="contenedor-ejemplos" id="">
+            <h2>Esto es Madrid:</h2>
+           
+        </div>
         <section id="formación">
             <h2>Formación:</h2>
             <ul>
