He añadido el correo de la UPM

--- a/CV.html
+++ b/CV.html
@@ -55,6 +55,7 @@
         </section>
         <section id="otros">
             <h2>Otros:</h2>
+            <li>Correo UPM: alejandra.plaza@alumnos.upm.es</li>
             <li>Permiso de conducir B</li>
             <li>Aptitudes: Persona dinámica, organizada, con gran disciplina, buena disposición a trabajar y fuerte capacidad comunicativa.</li>
         </section>
